--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Metamorphous&display=swap');
 
 body {
+	background: url(../img/background/lightpaperfibers.png) repeat;
+	padding-bottom: 52px;
 }
 
 .main-nav {
 	margin-bottom: 0;
-	display: none;
+	border-radius: 0;
+	position: fixed;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    bottom: 0;
+    /*display: none;*/
+}
+@media (min-width: 1024px) {
+	.main-nav {
+		position: relative;
+	}
+	body {
+		padding-bottom: 0;
+	}
 }
 
 .sheets-container {
@@ -28,7 +44,7 @@ body {
 }
 @media (min-width: 1024px) {
 	.sheets-container {
-		height: 100vh;
+		height: calc(100vh - 52px);
 	}
 }
 
@@ -39,4 +55,41 @@ body {
 	.sheets-container {
 		position: relative;
 	}
+}
+
+/* ARTICLE */
+article {
+	padding-bottom: 60px;
+	max-width: 800px;
+	margin: 0 auto;
+}
+article h2 {
+	line-height: 125%;
+	font-family: 'Metamorphous', cursive;
+	margin: 1.5em auto .5em;
+}
+article p {
+	font-size: 16px;
+	line-height: 150%;
+	margin: 1em auto 1.5em;
+}
+article figcaption {
+	margin: 16px auto 0;
+}
+@media (min-width: 1024px) {
+	article {padding: 40px 0 80px;}
+	article h2 {font-size: 48px;}
+	article p {font-size: 22px;}
+	article figcaption {font-size: 16px;}
+}
+
+article figure {
+	background: #FFFFFF;
+	padding: 16px;
+	transform: rotate(-.5deg);
+	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.26);
+	text-align: center;
+}
+article figure:nth-child(even) {
+	transform: rotate(.5deg);
 }
